	PR c++/10939 	* pt.c (tsubst_decl): Do not try to substitute into non-dependent 	functions. 	(value_dependent_expression_p): Correct logic for FUNCTION_DECLs.

PR c++/10939
	* g++.dg/template/func1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68244 138bc75d-0d04-0410-961f-82ee72b054a4